[🚀 사이클2 - 미션 (예약 대기 승인)] 피즈 미션 제출합니다. (#458)
* refactor: 오타 수정

* refactor: id를 제외한 모든 필드로 equals, hashCode 재정의

* test: 높은 숫자의 ID로 existBytimeId, existByThemeId를 테스트해, 우연히 테스트가 통과되는 상황 방지하도록 수정

* refactor: 매직 넘버 상수로 변경

* refactor: 예약 가능 상태 Enum 도입 및 Service에서 request, response 분리

* refactor: service 어노테이션 변경, Repository Optional 반환 방식 변경

* refactor: 사용하지 않는 어노테이션 삭제

* refactor: 클라이언트 측 예외 log를 info 레벨로 변경

* refactor: sql문 텍스트 블록으로 변경

* refactor: 대기자의 이름이 같은지 판별하는 로직을 Wait 도메인 내부로 이동

* refactor: wait와 reservation 조회 형식 분리

* test: 리팩토링 후 깨진 테스트 수정

* refactor: 사용하지 않는 메서드 삭제

* feat: time, theme을 삭제할 때 해당 time, theme를 사용하는 대기가 있는지 확인하는 기능 구현

* refactor: 메서드명 변경

* fix: 대기 순번이 제대로 계산되지 않는 문제 해결

* refactor: Service의 request, response를 Controller DTO와 통합

* refactor: 예외 코드를 모아두지 않고, 상황별 예외를 만들어 서버용, 클라이언트용 예외 메시지 분리

* refactor: Response List 래핑해 반환

* refactor: DTO 계층 제거 및 Slot, Waits 도메인 도입

* docs: 모든 API 명세 추가

* docs: 누락된 공통 예외 명세 추가

* fix: 순번이 제대로 계산되지 않는 문제 해결

* test: 도메인 테스트 추가, 수정

* refactor: 불변 객체인 Wait를 그대로 반환하도록 수정

* docs: 실제 예외 메시지와 동일하게 수정